# Edra-SDK

./: .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/include/: EdraCore.hpp  ModuleInfo.hpp
Core/include/EdraSDK/Core/: Aliases.hpp  EdraCore.hpp  EdraDef.hpp  Types.hpp  edrapch.hpp
Core/include/EdraSDK/Core/ABI/: ABIContext.hpp
Core/include/EdraSDK/Core/Module/: Module.hpp
Core/include/EdraSDK/Core/Utils/: ABI.hpp
Core/src/: ModuleInfo.cpp  edrapch.cpp  main.cpp
Core/src/Module/: Module.cpp
Platform/: CMakeLists.txt
Platform/include/: EdraPlatform.hpp
Platform/include/EdraSDK/Platform/: EdraPlatform.hpp  ModuleInfo.hpp
Platform/include/EdraSDK/Platform/Window/: Window.hpp  WindowABIContext.hpp  WindowCore.cpp  WindowCore.hpp  WindowDefABI.hpp
Platform/src/: ModuleInfo.cpp  main.cpp
Platform/src/Window/: Window.cpp
PlatformOS/: CMakeLists.txt
PlatformOS/include/EdraSDK/PlatformOS/: EdraPlatformOS.hpp  platformos_pch.hpp
PlatformOS/include/EdraSDK/PlatformOS/Windows/: Win32Window.hpp
PlatformOS/src/: ModuleInfo.cpp  platformos_pch.cpp
PlatformOS/src/Windows/: Win32Window.cpp
cmake/: EdraSDKConfig.cmake.in
